test/Fail/Issue5029.agda
{-# OPTIONS --safe -W noTerminationIssue #-}

data ⊥ : Set where

bad : ⊥
bad = bad
